supervisor-macros/tests/ui/compile_fail/resources_duplicate_name.stderr
error: duplicate resource name `LED`
  --> tests/ui/compile_fail/resources_duplicate_name.rs:13:35
   |
13 |         resources: [LED: FakeLed, LED: FakeUart];
   |                                   ^^^
